fix navbar on mobile

--- a/gmt/static/tailwind.css
+++ b/gmt/static/tailwind.css
@@ -788,6 +788,14 @@ video {
   margin-top: -4rem;
 }
 
+.ml-0 {
+  margin-left: 0px;
+}
+
+.mr-20 {
+  margin-right: 5rem;
+}
+
 .block {
   display: block;
 }
@@ -824,12 +832,12 @@ video {
   height: 100vh;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .h-6 {
   height: 1.5rem;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .h-5 {
@@ -917,16 +925,16 @@ video {
   width: 6rem;
 }
 
+.w-6 {
+  width: 1.5rem;
+}
+
 .w-12 {
   width: 3rem;
 }
 
 .w-44 {
   width: 11rem;
-}
-
-.w-6 {
-  width: 1.5rem;
 }
 
 .w-32 {
@@ -3296,6 +3304,10 @@ video {
     margin-top: 0.25rem;
   }
 
+  .md\:ml-auto {
+    margin-left: auto;
+  }
+
   .md\:block {
     display: block;
   }
@@ -3775,6 +3787,10 @@ video {
     display: none;
   }
 
+  .lg\:h-48 {
+    height: 12rem;
+  }
+
   .lg\:h-64 {
     height: 16rem;
   }
@@ -3787,12 +3803,12 @@ video {
     height: 4rem;
   }
 
-  .lg\:h-48 {
-    height: 12rem;
-  }
-
   .lg\:w-1\/4 {
     width: 25%;
+  }
+
+  .lg\:w-48 {
+    width: 12rem;
   }
 
   .lg\:w-3\/4 {
@@ -3809,10 +3825,6 @@ video {
 
   .lg\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .lg\:w-48 {
-    width: 12rem;
   }
 
   .lg\:grid-cols-4 {
